Change link text.

--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -47,7 +47,7 @@ layout: default
         {% elsif page.citation %}
           <p>Recommended citation: {{ page.citation }} </p>
         {% elsif post.paperurl %}
-          <p>Download <a href=" {{ post.paperurl }} "><u>here</u></a></p>
+          <p><a href=" {{ post.paperurl }} "><u>Paper link.</u></a></p>
         {% endif %}
     
         </header>
