--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -46,8 +46,8 @@ layout: default
           <p>Recommended citation: {{ page.citation }} <a href="{{ page.paperurl }}"><u>{{ page.paperurl }}</u></a></p>
         {% elsif page.citation %}
           <p>Recommended citation: {{ page.citation }} </p>
-        {% elsif post.paperurl %}
-          <p><a href=" {{ post.paperurl }} "><u>Paper link.</u></a></p>
+        {% elsif page.paperurl %}
+          <p><a href=" {{ page.paperurl }} "><u>Paper link.</u></a></p>
         {% endif %}
     
         </header>
