--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -16,4 +16,6 @@ ol.bibliography li {
   @include fluid-type($min-vw, $max-vw, 28px, 40px);
 }
 
-}
+// ol.bibliography a.details {
+//   margin-left: 0.5rem;
+// }
