--- a/_layouts/bibitem.html
+++ b/_layouts/bibitem.html
@@ -1,9 +1,3 @@
 ---
 ---
-{{ reference }}
-
-{% if entry.abstract %}
-<p>{{ entry.abstract }}</p>
-{% endif %}
-
-<pre>{{ entry.bibtex }}</pre>
+<a class="simple-biblink" href="{{ link }}">{{ reference }}</a>
