--- a/_layouts/bibitem.html
+++ b/_layouts/bibitem.html
@@ -1,7 +1,7 @@
 ---
 ---
 {% if entry.url %}
-<a class="simple-biblink" href="{{ entry.url }}">{{ reference }}</a>
+<a class="bibitem-link" href="{{ entry.url }}">{{ reference }}</a>
 {% else %}
 {{ reference }}
 {% endif %}
