--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -1,5 +1,14 @@
 
-// Change <ol class="bibliography"> to not display the numbers. 
+span.obfuscated-email b {
+  display: none;
+}
+
+.svg-email-protection {
+  width: 180px;
+  height: 24px;
+  vertical-align: middle;
+}
+
 ol.bibliography {
   list-style: none;
   counter-reset: bibliography;
@@ -7,7 +16,6 @@ ol.bibliography {
   padding-left: 0;
 }
 
-// Increase spacing around list items.
 ol.bibliography li {
   margin-bottom: 1rem;
 }
@@ -15,10 +23,6 @@ ol.bibliography li {
 .page-title {
   @include fluid-type($min-vw, $max-vw, 28px, 40px);
 }
-
-// ol.bibliography a.details {
-//   margin-left: 0.5rem;
-// }
 
 .bibitem-link {
   text-decoration: none;
