--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -29,3 +29,14 @@ span.obfuscated-email b {
   text-align: right;
   color: #000; /* Customize the color as needed */
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.scrollbar-hidden::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.scrollbar-hidden {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
