--- a/src/index.njk
+++ b/src/index.njk
@@ -43,6 +43,13 @@ layout: layouts/base.njk
 
   <div class="max-w-5xl mx-auto">
     <div class="relative">
+  
+        <div class="flex flex-col sm:flex-row sm:items-center sm:justify-center mt-2">
+          <a class="text-center text-slate-100 bg-indigo-500 rounded-lg whitespace-nowrap p-1 mx-2 sm:mr-1 sm:ml-0 my-1 hover:bg-indigo-600" href="#slide-1"><i class="fas fa-cubes fa-md mx-1"></i><span class="pr-1"> Data-Driven Control</span></a>
+          <a class="text-center text-slate-100 bg-indigo-500 rounded-lg whitespace-nowrap p-1 mx-2 sm:mr-1 sm:ml-0 my-1 hover:bg-indigo-600" href="#slide-2"><i class="fas fa-flask fa-md mx-1"></i><span class="pr-1"> Computational Engineering</span></a>
+          <a class="text-center text-slate-100 bg-indigo-500 rounded-lg whitespace-nowrap p-1 mx-2 sm:mr-1 sm:ml-0 my-1 hover:bg-indigo-600" href="#slide-3"><i class="fas fa-universal-access fa-md mx-1"></i><span class="pr-1"> Human-Centered Autonomy</span></a>
+        </div>
+        
         <div class="relative w-full flex snap-x snap-mandatory overflow-auto scrollbar-hidden w-full pt-0 sm:pb-10 sm:px-0">
           <div id="slide-1" class="shrink-0 max-w-5xl snap-center w-full sm:mx-12 mx-4 mb-12 sm:mb-0 sm:pt-6">
             <div class="flex flex-col shrink-0 max-w-4xl sm:w-full h-auto bg-slate-200 sm:mx-auto mx-2 rounded-lg shadow-md hover:shadow-lg transition-shadow duration-300 p-4">
@@ -93,11 +100,11 @@ layout: layouts/base.njk
             <div class="shrink-0 sm:w-4"></div>
           </div>
         </div>
-  
-        <div class="flex flex-col sm:flex-row sm:items-center sm:justify-center mt-2">
-          <a class="text-center text-slate-100 bg-indigo-500 rounded-lg whitespace-nowrap p-1 mx-2 sm:mr-1 sm:ml-0 my-1 hover:bg-indigo-600" href="#slide-1"><i class="fas fa-cubes fa-md mx-1"></i><span class="pr-1"> Data-Driven Control</span></a>
-          <a class="text-center text-slate-100 bg-indigo-500 rounded-lg whitespace-nowrap p-1 mx-2 sm:mr-1 sm:ml-0 my-1 hover:bg-indigo-600" href="#slide-2"><i class="fas fa-flask fa-md mx-1"></i><span class="pr-1"> Computational Engineering</span></a>
-          <a class="text-center text-slate-100 bg-indigo-500 rounded-lg whitespace-nowrap p-1 mx-2 sm:mr-1 sm:ml-0 my-1 hover:bg-indigo-600" href="#slide-3"><i class="fas fa-universal-access fa-md mx-1"></i><span class="pr-1"> Human-Centered Autonomy</span></a>
+
+        <div class="absolute bottom-0 left-0 right-0 flex justify-center pb-4">
+          <a href="#slide-1" class="w-2 h-2 mx-1 bg-gray-400 rounded-full hover:bg-gray-600"></a>
+          <a href="#slide-2" class="w-2 h-2 mx-1 bg-gray-400 rounded-full hover:bg-gray-600"></a>
+          <a href="#slide-3" class="w-2 h-2 mx-1 bg-gray-400 rounded-full hover:bg-gray-600"></a>
         </div>
       </div>
   </div>
@@ -200,6 +207,16 @@ layout: layouts/base.njk
           </div>
         <div class="flex flex-wrap sm:inline-flex mt-2 mb-1">
           <a class="py-1 px-2 mr-1 my-1 rounded-lg whitespace-nowrap text-sm bg-indigo-300 text-slate-100 hover:bg-indigo-500" href="https://arxiv.org/abs/2404.02876"><i class="fas fa-file-alt"></i> Paper</a>
+          <!-- <a class="py-1 px-2 mr-1 my-1 rounded-lg whitespace-nowrap text-sm bg-indigo-300 text-slate-100 hover:bg-indigo-500" href="link_to_code"><i class="fas fa-code"></i> Code</a> -->
+          <!-- <a class="py-1 px-2 mr-1 my-1 rounded-lg whitespace-nowrap text-sm bg-indigo-300 text-slate-100 hover:bg-indigo-500" href="link_to_project_page"><i class="fas fa-rocket"></i> Project Page</a> -->
+        </div>
+      </li>
+      <li class="p-1 my-3">
+          <div class="">
+            K. Ortiz, R. DiPirro, A. Thorpe, and M. Oishi, “Online learning of dynamical systems using low-rank updates to physics-informed kernel distribution embeddings,” in 2024 IEEE 63rd Conference on Decision and Control (CDC), Milan, Italy, 2024.
+          </div>
+        <div class="flex flex-wrap sm:inline-flex mt-2 mb-1">
+          <!-- <a class="py-1 px-2 mr-1 my-1 rounded-lg whitespace-nowrap text-sm bg-indigo-300 text-slate-100 hover:bg-indigo-500" href="https://ieeexplore.ieee.org/abstract/document/10644169"><i class="fas fa-file-alt"></i> Paper</a> -->
           <!-- <a class="py-1 px-2 mr-1 my-1 rounded-lg whitespace-nowrap text-sm bg-indigo-300 text-slate-100 hover:bg-indigo-500" href="link_to_code"><i class="fas fa-code"></i> Code</a> -->
           <!-- <a class="py-1 px-2 mr-1 my-1 rounded-lg whitespace-nowrap text-sm bg-indigo-300 text-slate-100 hover:bg-indigo-500" href="link_to_project_page"><i class="fas fa-rocket"></i> Project Page</a> -->
         </div>
