Removing nav buttons.

--- a/src/index.njk
+++ b/src/index.njk
@@ -44,16 +44,16 @@ layout: layouts/base.njk
   <div class="max-w-5xl mx-auto">
     <div class="relative">
   
-        <div class="flex flex-col sm:flex-row sm:items-center sm:justify-center mt-2">
+        <!-- <div class="flex flex-col sm:flex-row sm:items-center sm:justify-center mt-2">
           <a class="text-center text-slate-100 bg-indigo-500 rounded-lg whitespace-nowrap p-1 mx-2 sm:mr-1 sm:ml-0 my-1 hover:bg-indigo-600" href="#slide-1"><i class="fas fa-cubes fa-md mx-1"></i><span class="pr-1"> Data-Driven Control</span></a>
           <a class="text-center text-slate-100 bg-indigo-500 rounded-lg whitespace-nowrap p-1 mx-2 sm:mr-1 sm:ml-0 my-1 hover:bg-indigo-600" href="#slide-2"><i class="fas fa-flask fa-md mx-1"></i><span class="pr-1"> Computational Engineering</span></a>
           <a class="text-center text-slate-100 bg-indigo-500 rounded-lg whitespace-nowrap p-1 mx-2 sm:mr-1 sm:ml-0 my-1 hover:bg-indigo-600" href="#slide-3"><i class="fas fa-universal-access fa-md mx-1"></i><span class="pr-1"> Human-Centered Autonomy</span></a>
-        </div>
+        </div> -->
         
         <div class="relative w-full flex snap-x snap-mandatory overflow-auto scrollbar-hidden w-full pt-0 sm:pb-10 sm:px-0">
           <div id="slide-1" class="shrink-0 max-w-5xl snap-center w-full sm:mx-12 mx-4 mb-12 sm:mb-0 sm:pt-6">
             <div class="flex flex-col shrink-0 max-w-4xl sm:w-full h-auto bg-slate-200 sm:mx-auto mx-2 rounded-lg shadow-md hover:shadow-lg transition-shadow duration-300 p-4">
-              <h3 class="text-xl font-semibold mb-2">Data-Driven Control</h3>
+              <h3 class="text-xl font-semibold mb-2"><i class="fas fa-cubes fa-md mx-1"></i> Data-Driven Control</h3>
               <p class="text-sm">
                 I developed algorithms using <em>kernel methods</em> to solve approximate reformulations of stochastic optimal control problems that
                 (i) can be solved as a linear program (LP),
@@ -70,7 +70,7 @@ layout: layouts/base.njk
           </div>
           <div id="slide-2" class="shrink-0 max-w-4xl snap-center w-full sm:mx-12 mx-4 mb-12 sm:mb-0 sm:pt-6">
             <div class="flex flex-col shrink-0 max-w-4xl sm:w-full h-auto bg-slate-200 sm:mx-auto mx-2 rounded-lg shadow-md hover:shadow-lg transition-shadow duration-300 p-4">
-              <h3 class="text-xl font-semibold mb-2">Computational Engineering</h3>
+              <h3 class="text-xl font-semibold mb-2"><i class="fas fa-flask fa-md mx-1"></i> Computational Engineering</h3>
               <p class="text-sm">
                 I have developed novel methods for <a class="text-sky-600" href="https://arxiv.org/abs/2410.00171">Basis-to-Basis (B2B) operator learning</a>. 
                 Basis-to-Basis operator learning uses function encoders to learn a basis for the domain and codomain of an operator on Hilbert spaces, and then independently learns a mapping between the learned spaces to approximate the operator. 
@@ -84,7 +84,7 @@ layout: layouts/base.njk
           </div>
           <div id="slide-3" class="shrink-0 max-w-4xl snap-center w-full sm:mx-12 mx-4 mb-0 sm:mb-0 sm:pt-6">
             <div class="flex flex-col shrink-0 max-w-4xl sm:w-full h-auto bg-slate-200 sm:mx-auto mx-2 rounded-lg shadow-md hover:shadow-lg transition-shadow duration-300 p-4">
-              <h3 class="text-xl font-semibold mb-2">Human-Centered Autonomy</h3>
+              <h3 class="text-xl font-semibold mb-2"><i class="fas fa-universal-access fa-md mx-1"></i> Human-Centered Autonomy</h3>
               <p class="text-sm">
                 I have developed methods for characterizing human behavior in the context of human-autonomy interaction.
                 Using statistical techniques, I have developed methods that enable the <a class="text-sky-600" href="https://www.sciencedirect.com/science/article/pii/S2405896323001039"><em>quantification of human behavior</em></a> for the purpose of designing autonomy that is responsive to individual needs and preferences.
